Bug 485161 - Some tools under Canvas Input Settings -> Touch Gestures -> Gestures don't activate or are mislabeled
Summary: Some tools under Canvas Input Settings -> Touch Gestures -> Gestures don't ac...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2024-04-06 23:51 UTC by AppTest
Modified: 2025-11-19 19:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AppTest 2024-04-06 23:51:07 UTC
The Freehand Brush Tool and Color Sampler tool under Touch Gestures don't activate.
Also, the touch gesture for Freehand Selection tool actually activates the Contiguous Selection tool, so this label is incorrect.

STEPS TO REPRODUCE
1. Go to Settings, Configure Krita, Canvas Input Settings, Touch Gestures
2. Create a Gesture for Freehand Brush Tool, Color Sampler
3. These gestures won't work. (Move and Transform tools, on the other hand, work just fine, so the tool gestures are partially functional.)

OBSERVED RESULT
Gestures don't work.

EXPECTED RESULT
Gestures work.

SOFTWARE/OS VERSIONS
Android 13
Krita 5.3-prealpha, nightly, arm64, April 3, 2024. Git af07b4f
Comment 1 Dmitry Kazakov 2025-11-19 14:09:47 UTC
Git commit 922b6829dd19557d35f7f8bf0fdadd97e365c5fd by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 19/11/2025 at 14:08.
Pushed by dkazakov into branch 'master'.

Fix various touch shortcuts with wrong actions

The freehand, color sampler and transform tool had outright nonexistent
actions assigned to them. The freehand selection tool instead caused the
magic wand to activate. Those are now all corrected to actually call
upon the tools they proclaim to summon.

This also removes a bunch of duplication and adds warnings when an
action isn't found, rather than just silently doing nothing and leaving
you wondering.

M  +43   -90   libs/ui/input/KisTouchGestureAction.cpp

https://invent.kde.org/graphics/krita/-/commit/922b6829dd19557d35f7f8bf0fdadd97e365c5fd
Comment 2 dra.w.p.il.e+bugskde 2025-11-19 19:30:02 UTC
Git commit 8f7d433eb3768e74b823067e900010b86ae8da7f by Carsten Hartenfels.
Committed on 19/11/2025 at 17:06.
Pushed by hartenfels into branch 'krita/5.2'.

Fix various touch shortcuts with wrong actions

The freehand, color sampler and transform tool had outright nonexistent
actions assigned to them. The freehand selection tool instead caused the
magic wand to activate. Those are now all corrected to actually call
upon the tools they proclaim to summon.

This also removes a bunch of duplication and adds warnings when an
action isn't found, rather than just silently doing nothing and leaving
you wondering.

M  +25   -36   libs/ui/input/KisTouchGestureAction.cpp

https://invent.kde.org/graphics/krita/-/commit/8f7d433eb3768e74b823067e900010b86ae8da7f