Fix various touch shortcuts with wrong actions

The freehand, color sampler and transform tool had outright nonexistent
actions assigned to them. The freehand selection tool instead caused the
magic wand to activate. Those are now all corrected to actually call
upon the tools they proclaim to summon.

This also removes a bunch of duplication and adds warnings when an
action isn't found, rather than just silently doing nothing and leaving
you wondering.

BUG:485161